# chat-gpt-api-use-library

./: Cargo.toml
src/: main.rs
src/open_ai/: chat.rs
